soundbutton skeleton mobile fix and proptypes update

--- a/src/components/SoundButton/SoundButton.css
+++ b/src/components/SoundButton/SoundButton.css
@@ -68,7 +68,7 @@
 
 .soundbutton-skeleton {
   height: 6rem;
-  width: 8rem;
+  min-width: 8rem;
   background: #333;
   border: 4px solid #ccc;
   overflow: hidden;
